--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <section class="task_section">
                 
                 <div class="form-group">
-                    <input type="text" class="fi form_title" placeholder="Enter the Task ..." required>
+                    <input type="text" class="fi form_title" placeholder="Come on! Note down your Task here..." required>
                 </div>
                 <div class="form-group">
                     <textarea type="text" rows="10" class="fi form_description"
-                        placeholder="Description of Task ...."></textarea>
+                        placeholder="Wanna Describe it? Pen it here..."></textarea>
                 </div>
                 <div class="form-group">
                     <input type="date" class="fi form_deadline" " placeholder="deadline" required>
